# pxe-update

./: BUILD.md  Makefile.am  Makefile.in  README.md  TODO.md  autogen  configure  configure.ac  pxe-update_1.0.orig.tar.gz.delta  pxe-update_1.0.orig.tar.gz.id  pxe-update_1.1.orig.tar.gz.delta  pxe-update_1.2.orig.tar.gz.delta  pxe-update_1.3.orig.tar.gz.delta  pxe-update_1.3.orig.tar.gz.id
data/themes/default/: stdmenu.cfg
debian/: changelog  control  copyright  gbp.conf  postinst  postrm  pxe-update.cron.d  pxe-update.lintian-overrides  watch
etc/: pxe-update.conf
etc/boot-screens.d/: README
man/: pxe-update.1  pxe-update.1.in  pxe-update.conf.5  pxe-update.conf.5.in
src/: pxe-update  pxe-update.in
