#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([pxe-update], [1.1], [raphael.halimi@gmail.com])
AM_INIT_AUTOMAKE([1.11 foreign silent-rules subdir-objects])
AM_MAINTAINER_MODE

# Checks for programs.
AC_PROG_SED
AC_PROG_MKDIR_P

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
